# wiznet-iot-speaker

./: .gitignore  README.md
firmware/stm32cube/: .mxproject  Makefile  iot_speaker.ioc
firmware/stm32cube/Core/Inc/: fdcan.h  i2c.h  i2s.h  main.h  octospi.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h
firmware/stm32cube/Core/Src/: dma.c  fdcan.c  fmc.c  gpio.c  i2c.c  i2s.c  main.c  octospi.c  rtc.c  sai.c  sdmmc.c  spi.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c
firmware/stm32cube/USB_DEVICE/App/: usb_device.c  usbd_desc.c  usbd_storage_if.c  usbd_storage_if.h
firmware/wiznet-iot-speaker-boot/: CMakeLists.txt
firmware/wiznet-iot-speaker-boot/src/ap/: ap.cpp
firmware/wiznet-iot-speaker-boot/src/bsp/: bsp.c  bsp.h
firmware/wiznet-iot-speaker-boot/src/bsp/device/: system_stm32h7xx.c
firmware/wiznet-iot-speaker-boot/src/bsp/ldscript/: STM32H723ZGTX_BOOT.ld  STM32H723ZGTX_FLASH.ld
firmware/wiznet-iot-speaker-boot/src/bsp/startup/: startup_stm32h723zgtx.s
firmware/wiznet-iot-speaker-boot/src/common/: err_code.h
firmware/wiznet-iot-speaker-boot/src/hw/: hw.c  hw.h  hw_def.h
firmware/wiznet-iot-speaker-boot/src/hw/driver/: buzzer.c  es8156.c  fatfs.c  flash.c  fs.c  log.c  mixer.c  pwm.c  qspi.c  reset.c  rtc.c  sai.c  sd.c  spi.c
firmware/wiznet-iot-speaker-fw/: CMakeLists.txt
firmware/wiznet-iot-speaker-fw/src/ap/: ap.c  ap.cpp
firmware/wiznet-iot-speaker-fw/src/ap/thread/cmd/: cmd_thread.cpp  cmd_thread.h
firmware/wiznet-iot-speaker-fw/src/ap/thread/cmd/driver/: cmd_uart.cpp  cmd_udp.cpp  cmd_udp.h
firmware/wiznet-iot-speaker-fw/src/ap/thread/cmd/process/: cmd_audio.cpp  cmd_audio.h  cmd_boot.cpp  cmd_boot.h
firmware/wiznet-iot-speaker-fw/src/ap/thread/osd/: osd_thread.cpp  osd_thread.h
firmware/wiznet-iot-speaker-fw/src/bsp/: bsp.c  bsp.h
firmware/wiznet-iot-speaker-fw/src/bsp/device/: stm32h7xx_hal_conf.h  stm32h7xx_it.c
firmware/wiznet-iot-speaker-fw/src/bsp/ldscript/: STM32H723ZGTX_BOOT.ld  STM32H723ZGTX_FLASH.ld
firmware/wiznet-iot-speaker-fw/src/bsp/startup/: startup_stm32h723zgtx.s
firmware/wiznet-iot-speaker-fw/src/common/: def.h  err_code.h
firmware/wiznet-iot-speaker-fw/src/common/hw/include/: button.h  cdc.h  fmc.h  gpio.h  i2s.h  lcd.h  led.h  mixer.h  nvs.h  qspi.h  rtc.h  sai.h  sd.h  swtimer.h  uart.h  w5300.h  w5300_regs.h
firmware/wiznet-iot-speaker-fw/src/common/hw/src/: cli.c
firmware/wiznet-iot-speaker-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/wiznet-iot-speaker-fw/src/hw/driver/: button.c  dxl.c  encoder.c  es8156.c  fault.c  flash.c  fmc.c  gpio.c  i2c.c  i2s.c  lcd.c  led.c  mixer.c  qspi.c  reset.c  rtc.c  sai.c  sd.c  spi.c  swtimer.c  uart.c  w5300.c
firmware/wiznet-iot-speaker-fw/src/hw/driver/dxl/: dxl_uart.c
firmware/wiznet-iot-speaker-fw/src/hw/driver/lcd/: st7789.c
firmware/wiznet-iot-speaker-fw/src/hw/driver/usb/: usb.c  usbd_conf.c  usbd_conf.h
firmware/wiznet-iot-speaker-fw/src/hw/driver/usb/usb_cdc/: usbd_cdc.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.h
firmware/wiznet-iot-speaker-fw/src/hw/driver/wiznet/: w5300.c  w5300.h  wizchip_conf.c  wizchip_conf.h  wiznet.c  wiznet.h
firmware/wiznet-iot-speaker-fw/src/hw/driver/wiznet/dhcp/: dhcp.c
firmware/wiznet-iot-speaker-fw/src/hw/driver/wiznet/dns/: dns.c
firmware/wiznet-iot-speaker-fw/src/hw/driver/wiznet/mqtt/: mqtt.h  mqtt_interface.c
firmware/wiznet-iot-speaker-fw/src/hw/driver/wiznet/sntp/: sntp.c  sntp.h
firmware/wiznet-iot-speaker-fw/src/hw/driver/wiznet/socket/: socket.h
firmware/wiznet-iot-speaker-fw/src/lib/lvgl/: lvgl.h
firmware/wiznet-iot-speaker-fw/tools/mac/: wiz-iot-loader
hardware/io_bd/: BOM_PCB_IOT-SPEAKER-IO_2023-04-30.csv  PickAndPlace_PCB_IOT-SPEAKER-IO_2023-04-30.csv
hardware/main_bd/: BOM_PCB_IOT-SPEAKER_2023-04-30.csv  PickAndPlace_PCB_IOT-SPEAKER_2023-04-30.csv
software/wiz-iot-gui/: README.md  requirements.txt  wiz-iot-gui.py
software/wiz-iot-gui/lib/: cmd.py
software/wiz-iot-gui/ui/: ui_main.py  ui_main.ui
software/wiz-iot-loader/: CMakeLists.txt  README.md
software/wiz-iot-loader/src/ap/: ap.cpp  ap_def.h
software/wiz-iot-loader/src/common/: def.h
software/wiz-iot-loader/tools/mac/: at32f_loader
(+24 files in other folders)
